added tempoarary images to start image slider. added temporaryy descriptions

--- a/css/styles.css
+++ b/css/styles.css
@@ -207,3 +207,14 @@
         font-size: 15px;
     }
 }
+
+
+/* This is for carousel  */
+/* This is for carousel  */
+/* This is for carousel  */
+/* This is for carousel  */
+/* This is for carousel  */
+/* This is for carousel  */
+
+/* This is for carousel  */
+
