--- a/css/styles.css
+++ b/css/styles.css
@@ -196,6 +196,35 @@
     background-color: rgb(33, 33, 77) ;
 }
 
+.submenu{
+    display: none;
+    left: 50%;
+    transform: translate(-50%, 0);
+    text-align: center;
+    position: absolute;
+    background-color: rgba(23, 23, 152, 0.674);
+    min-width: 160px;
+    border-radius: 5px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+
+.submenu a{
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.submenu a:hover{
+    background-color:rgb(33, 33, 77) ;
+}
+@media screen and (max-width: 480px) {
+    .submenu {
+        width: 100%;
+        position: relative;
+    }
+}
+
 footer{
     display: flex;
     justify-content: center;
