--- a/css/styles.css
+++ b/css/styles.css
@@ -225,6 +225,25 @@
     }
 }
 
+.feature .carImage{
+    border: 2px solid red;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    margin-left: 75px;
+}
+
+.feature{
+    width: 32%;
+    display: inline-block;
+    font-size: 16px;
+    border: 4px solid white;
+    margin-left: 10px;
+}
+.feature img{
+    width: 40%;
+}
+
 footer{
     display: flex;
     justify-content: center;
@@ -250,8 +269,9 @@ footer{
 /* This is for carousel  */
 /* This is for carousel  */
 /* This is for carousel  */
-
-/* This is for carousel  */
+.cardList{
+   
+}
 
 
 
