--- a/css/styles.css
+++ b/css/styles.css
@@ -269,8 +269,26 @@ footer{
 /* This is for carousel  */
 /* This is for carousel  */
 /* This is for carousel  */
-.cardList{
-   
+
+
+.theBud {
+    position: relative;
+    max-width: 200px;
+    margin-inline: auto;
+}
+
+.budCircle {
+    position: absolute;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    width: 175%;
+    border-radius: 30px;
+}
+
+.budPicture{
+    position: relative;
+    z-index: 2;
+    width: 300px;
 }
 
 
