--- a/css/styles.css
+++ b/css/styles.css
@@ -350,4 +350,49 @@ footer{
 }
 
 
+/* STYLING FOR ABOUT US PAGE */
 
+.aboutUsVideo{
+    border: 5px solid purple;
+    max-width: 100%;
+    padding: 10px 30px 10px 30px;
+    margin: 0 30px 0 30px;
+
+}
+
+.aboutUsVideoClip{
+    width: 100%;
+}
+
+.ourFoundersDescrpition{
+  border: 2px solid red;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  
+  
+}
+
+.foundersImage{
+   max-width: 350px;
+   border: 3px solid green;
+   /* position: absolute; */
+    
+
+}
+
+.leftSideFounder{
+    width: 300px;
+    border: 3px solid yellow;
+    /* position: relative; */
+}
+.rightSideFounder{
+    width: 300px;
+    border: 3px dotted yellow;
+    /* position: relative; */
+}
+
+.foundersImage .leftSideFounder{
+    display: flex;
+    flex-wrap: wrap;
+}
